--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^14.0.3",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ng-multiselect-dropdown": "^1.0.0-beta.19",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "powerbi-client-angular": "^2.0.1",
