--- a/powerbi-embedded-ui.csproj
+++ b/powerbi-embedded-ui.csproj
@@ -27,6 +27,9 @@
     <None Remove="ClientApp\src\app\models\" />
     <None Remove="ClientApp\src\app\logs-view\" />
     <None Remove="ClientApp\src\app\filters\" />
+    <None Remove="ClientApp\src\app\services\" />
+    <None Remove="ClientApp\src\app\shared\" />
+    <None Remove="ClientApp\src\app\shared\spinner\" />
   </ItemGroup>
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
@@ -42,6 +45,9 @@
     <Folder Include="ClientApp\src\app\models\" />
     <Folder Include="ClientApp\src\app\logs-view\" />
     <Folder Include="ClientApp\src\app\filters\" />
+    <Folder Include="ClientApp\src\app\services\" />
+    <Folder Include="ClientApp\src\app\shared\" />
+    <Folder Include="ClientApp\src\app\shared\spinner\" />
   </ItemGroup>
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
